tests/paczka1/fuzzy1/79311991.err
Error in line 3: 8jiqrl S734 ,3
Error in line 2: nf0t S131 28,8
Error in line 6: nf0t S734 123,55
Error in line 4: IC7IoSVXl6 S734 28,5
Error in line 10: 8jiqrl S734 57,6
Error in line 15: IC7IoSVXl6 S131 -1,6
Error in line 13: 8jiqrl S298 83,0
Error in line 17: 8jiqrl S737 83,0
Error in line 5: nf0t S734 28,4
Error in line 18: 8jiqrl S734 54,3
Error in line 30: nf0t S298 30,6
Error in line 34: z0kans S737 86,8
Error in line 7: IC7IoSVXl6 S131 44,3
